[package]
name = "rusty-sound-flow"
version = "0.1.0"
edition = "2021"

[dependencies]
cpal = "0.15.3"
rustfft = "6.0.1"
wgpu = "0.15.1"
winit = "0.27.5"
anyhow = "1.0.68"
log = "0.4.17"
env_logger = "0.9.0"
futures = "0.3.25"
bytemuck = { version = "1.9.1", features = ["derive"] }
clap = { version = "4.0.32", features = ["derive"] }  # Command-line argument parsing
hound = "3.4.0"